--- a/src/Componenrts/Bio/Bio.css
+++ b/src/Componenrts/Bio/Bio.css
@@ -1,49 +1,61 @@
-.Bio{
-   width: 80%;
-    margin: 40px auto 0;
+#Bio{
+    width: 80%;
+    margin: 50px auto 0;
     display: grid;
     grid-template-columns: 1fr 1fr;
 }
+.Bio-Container{
+  padding-left: 43px;
+}
 
 h1{
-  font-size: 3rem;
-  font-family: "Playfair Display";
+  align-items: self-end;
+  font-family:"Playfair Display" ;
   font-weight: 600;
-    
-
+  font-size: 3.3rem !important;
 }
 
-.bio-image{
-    width: 18rem;
-    border-radius: 20px 20px 0px 0px;
+h4{
+  font-size: 2.0633rem;
+  color: rgb(34, 34, 194);
+  font-family: "Nunito";
+  font-weight: bold;
+  
+}
+
+.img-Container{
+  display: flex;
+  justify-content: center;
+ 
+}
+.imagepic{
+    width: 50%;
+    height: 100%;
+    margin-top: -22px;
+}
+.linkdbtn{
+    padding: 13px 44px ;
+    margin-right: 23px;
+    border: 1px solid #f0ecec;
+    border-radius: 17px;
+    color: white;
+    font-size: 1.3rem;
+    font-family: Nunito;
     background-color: #0093E9;
     background-image: linear-gradient(160deg, #0093E9 0%, #80D0C7 100%);
-    display:flex;
-    justify-self: center;
-    height: fit-content;
-  
 
 }
-.boi-phara1{
-    font-family: math;
-    font-size: 1.5rem;
-    font-weight: 600;
-  }
-.bio-image-pic{
-  width: 18rem;
-  height: 26rem ;
-  
-}
-.Bio-containtent{
-margin-top: 57px 
-}
-.boi-phara2{
-    color: #2b3030;
-    font-family: Onest, sans-serif !important;
+.gitbtn{
+   padding: 13px 44px ;
+    margin-right: 23px;
+    border: 1px solid #f0ecec;
+    border-radius: 17px;
+    color: white;
     font-size: 1.3rem;
-    font-weight: 400;
-    line-height: 1.625em
+    font-family: Nunito;
+    background-color: #0093E9;
+    background-image: linear-gradient(160deg, #0093E9 0%, #80D0C7 100%);
+
 }
 
 
- 
